feat: add completed filter to backlogs
